<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/lay_redeem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:padding="@dimen/dp_16"
            android:background="@drawable/dialogbackground">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/base"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/offer"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/valid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/offer"
                android:layout_marginTop="@dimen/dp_1"
                android:textSize="@dimen/sp_14"
                android:text="@string/valid"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/redeemvoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/voucherredeem"
                android:textAlignment="center"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/hintcolor"
                android:layout_below="@id/valid"/>

            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/Enter"
                android:gravity="center"
                android:inputType="textPassword"
                android:textColorHint="@color/hintcolor"
                android:layout_below="@id/redeemvoucher"
                android:padding="@dimen/dp_14"
                android:background="@drawable/border"/>


            <Button
                android:id="@+id/bt_submit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ed_pass"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/button_background"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bt_submit"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:id="@+id/rev_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/review"
                    android:textColor="@color/base"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_alignLeft="@+id/rev_text"
                    android:layout_alignRight="@+id/rev_text"
                    android:layout_below="@+id/rev_text"
                    android:background="@color/base" />
            </RelativeLayout>

        </RelativeLayout>
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/displaypic"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/sign_up_bg"
            app:riv_corner_radius="@dimen/dp_5" />

    </RelativeLayout>



</LinearLayout>
