<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fluper.mai.activity.EnterOTP">

    <include
        android:id="@+id/tToolbar"
        layout="@layout/toolbar" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/np"
        android:layout_marginTop="@dimen/dp_30"
        android:textSize="@dimen/sp_14"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/darkgrey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="vertical"
        android:background="@drawable/border">
        <EditText
            android:id="@+id/newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@android:color/transparent"
            android:hint="@string/newpass"
            android:textSize="@dimen/sp_16"
            android:inputType="textPassword"
            android:textColorHint="@color/hintcolor"
            android:singleLine="true"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            android:ellipsize="start"
            android:gravity="center" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:background="@color/base"/>
        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintcolor"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_16"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/dp_14"
            android:hint="@string/confirmnew"
            android:textAlignment="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"/>
</LinearLayout>
