<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.ScannerActivity">

    <include
        android:id="@+id/tToolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/frame_scan"
        android:layout_below="@id/tToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <me.dm7.barcodescanner.zxing.ZXingScannerView
            android:id="@+id/qr_scanner_view"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:borderColor="@color/white"
            app:borderLength="@dimen/dp_16">
        </me.dm7.barcodescanner.zxing.ZXingScannerView>
    </FrameLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/frame_scan"
            android:padding="@dimen/dp_16"
            android:background="@drawable/oneborder">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_70"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/base"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/offer"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/valid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/offer"
                android:layout_marginTop="@dimen/dp_1"
                android:textSize="@dimen/sp_14"
                android:text="@string/valid"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/redeemvoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/please"
                android:textAlignment="center"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                android:layout_below="@id/valid"/>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/redeemvoucher"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_20">

                <TextView
                    android:id="@+id/rev_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/review"
                    android:textColor="@color/base"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_alignLeft="@+id/rev_text"
                    android:layout_alignRight="@+id/rev_text"
                    android:layout_below="@+id/rev_text"
                    android:background="@color/base" />
            </RelativeLayout>

        </RelativeLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/displaypic"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/sign_up_bg"
        app:riv_corner_radius="@dimen/dp_5" />


    </RelativeLayout>

