<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sign_up_bg">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_40"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="vertical"
            android:background="@drawable/border">
            <EditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:paddingEnd="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:textColorHint="@color/hintcolor"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@color/base"/>
            <EditText
                android:id="@+id/pass_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:textColorHint="@color/hintcolor"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="Password"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@color/base"/>
            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/dp_12"
                android:textSize="@dimen/sp_16"
                android:layout_marginBottom="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_10"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColorHint="@color/hintcolor"
                android:hint="@string/confirm"
                android:textAlignment="center"/>
        </LinearLayout>
        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/Signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/or"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:paddingBottom="@dimen/dp_5"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/white"
                android:layout_toLeftOf="@id/or"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@color/white"
                android:layout_toRightOf="@id/or"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:background="@drawable/fb_button"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20">

            <TextView
                android:id="@+id/fb_signin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signin"
                android:layout_marginLeft="@dimen/dp_10"
                android:gravity="center"
                android:textAlignment="center"
                android:drawableLeft="@drawable/fb_btn"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:weightSum="1">
            <TextView
                android:id="@+id/tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Already"
                android:layout_weight=".6"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:layout_marginLeft="@dimen/dp_6">
                <TextView
                    android:id="@+id/loginback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/Sign" />
                <View
                    android:id="@+id/separator"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_below="@+id/loginback"
                    android:layout_alignLeft="@+id/loginback"
                    android:layout_alignRight="@+id/loginback"
                    android:background="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

